Styling changes to fix broken layout

--- a/app/app.scss
+++ b/app/app.scss
@@ -31,16 +31,19 @@
           min-width:1000px;
           max-width:1200px;
           margin:0 auto;
+          display:flex;
         }
       }
      }
    }
 
    .right-panel {
-     position: absolute;
-    right: 50%;
-    top: 200px;
-    width: 355px;
-    transform: translateX(535px);
+     width: 355px;
+     flex: 1;
+     margin-top: 100px;
+   }
+
+   .inner-wrapper {
+     flex:2;
    }
 }
