--- a/app/theme/fan.scss
+++ b/app/theme/fan.scss
@@ -3,15 +3,18 @@
 @import "_global";
 
 .wrapper {
-  width: 740px;
-  margin: 9px 50px 50px 0;
+  width: 770px;
+  margin: 15px 50px 50px 0;
 
   .container {
+    border: 2px solid $palette-border;
+    width: calc(100% - 48px);
     display: inline-block;
-    padding: 0;
+    padding: 15px 25px;
     border-radius: $border-radius $border-radius 0 0;
-    background-color: $palette-fan;
-    text-align:center;
+    min-height: 150px;
+    border-color: $palette-border;
+    background-color: #fff;
 
     h2, i {
       color: #fff;
